# portfolio

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  docker-scripts.sh  nginx.conf  package-lock.json  package.json  start-dev.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: docker-build.yml  nextjs-ci.yml  python-ci.yml
astro/: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-scripts.sh  package-lock.json  package.json  tailwind.config.js
astro/src/components/: Card.astro  ChapterHeader.astro  DarkModeToggle.astro  Logo.astro
astro/src/layouts/: BasicLayout.astro  ChapterLayout.astro  StorybookLayout.astro
astro/src/pages/: about.astro  ask-about-me.astro  contact.astro  final-project.astro  future.astro  index.astro  journey.astro  projects.astro  toolkit.astro
astro/src/styles/: globals.css
nextjs-portfolio/: Dockerfile.dev  package-lock.json  tailwind.config.ts
nextjs-portfolio/app/: globals.css  layout.tsx  page.tsx
nextjs-portfolio/app/about/: page.tsx
nextjs-portfolio/components/: Card.tsx  ChapterHeader.tsx  DarkModeToggle.tsx  Logo.tsx  ThemeScript.tsx
nextjs-portfolio/public/: robots.txt
python/: .dockerignore  .env  Dockerfile  Dockerfile.dev  app.py  pyproject.toml  requirements.txt
python/me/: summary.txt
src/layouts/: BasicLayout.astro  StorybookLayout.astro
src/pages/: about.astro  contact.astro  final-project.astro  future.astro  index.astro  journey.astro  projects.astro  toolkit.astro
(+7 files in other folders)
