[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gradio>=6.5.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.21.0",
    "pypdf>=6.7.0",
    "python-dotenv>=1.1.1",
]
